SOLR-11127: Fix precommit.